--- a/help/help.adoc
+++ b/help/help.adoc
@@ -1,4 +1,3 @@
-== Windows azure
 
 Plugin Version @PLUGIN_VERSION@
 
@@ -218,7 +217,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/create_or_update_subnet.
 
 
 [[CreateVM]]
-== CreateVM
+=== CreateVM
 
 This procedure allows users to create a VM using Azure Services.
 
@@ -515,7 +514,7 @@ This procedure allows users to delete resources recursively under a specified re
 
 image::cloudbees-common::cd-plugins/ec-azure/parameters/teardown.png[image]
 
-[[Release_Notes]]
+[[rns]]
 == Release notes
 
 === EC-Azure 1.1.10
@@ -530,29 +529,24 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/teardown.png[image]
 
 Renaming from "Electric Cloud" to "CloudBees"
 
-[[EC-Azure_1.1.7]]
 === EC-Azure 1.1.7
 
 * Configurations can be created by users with "@" sign in a name.
 
-[[EC-Azure_1.1.6]]
 === EC-Azure 1.1.6
 
 * Logo icon has been added.
 
-[[EC-Azure_1.1.5]]
 === EC-Azure 1.1.5
 
 * CreateVM procedure has been enhanced to support Resource Group Names for Storage Account and VNet that can be different from the Resource Group Name of the VM.
 
-[[EC-Azure_1.1.4]]
 === EC-Azure 1.1.4
 
 * Configured the plugin to allow the ElectricFlow UI to create configs inline of procedure form.
 * Configured the plugin to allow the ElectricFlow UI to render the plugin procedure parameters entirely using the configured form XMLs.
 * Enabled the plugin for managing the plugin configurations in-line when defining an application process step or a pipeline stage task.
 
-[[EC-Azure_1.1.3]]
 === EC-Azure 1.1.3
 
 New plugin version supports Azure Resource Manager Deployment Model instead of Azure Classic. Azure Classic deployment model is no longer supported in this version.
@@ -577,7 +571,6 @@ The following procedures have been removed while migrating the plugin to Microso
 * Delete Storage Account
 * Delete Hosted Service
 
-[[EC-Azure_1.1.0]]
 === EC-Azure 1.1.0
 
 Updated the Create Configuration procedure.
@@ -603,12 +596,10 @@ Added the following new procedures:
 * SQL Operations
 * TearDown
 
-[[EC-Azure_1.0.2]]
 === EC-Azure 1.0.2
 
 * Fixed the issue with configurations being cached for IE.
 
-[[EC-Azure_1.0.0]]
 === EC-Azure 1.0.0
 
 * Configuration Management
