--- a/help/help.adoc
+++ b/help/help.adoc
@@ -10,6 +10,11 @@ This plugin was developed and tested against Windows Azure 2012.
 
 {CD} minimum version 4.0
 
+This plugin enables you to:
+
+* <<Create-Or-Update-Database>>
+* <<Teardown>>
+
 [[Windows_Certificates]]
 == Working with Windows certificates
 
@@ -56,10 +61,9 @@ Subscription ID must be created and an X.509 management certificate needs to be 
 
 image::cloudbees-common::cd-plugins/ec-azure/parameters/configuration-panel.png[image]
 
+
+
 [[Create-Or-Update-Database]]
-
-
-[[Create_Or_Update_Database]]
 === Create or update database
 
 This procedure allows users to create or update the Database on a Database server.
@@ -83,9 +87,6 @@ This procedure allows users to create or update the Database on a Database serve
 |===
 
 image::cloudbees-common::cd-plugins/ec-azure/parameters/create-or-update-database.png[image]
-
-[[Delete-Database]]
-
 
 [[Delete_Database]]
 === Delete database
@@ -175,9 +176,6 @@ This procedure allows users to create or update a subnet.
 |===
 
 image::cloudbees-common::cd-plugins/ec-azure/parameters/create-or-update-subnet.png[image]
-
-[[CreateVM]]
-
 
 [[CreateVM]]
 === CreateVM
